// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DirectionButton direction: down renders correctly 1`] = `
<div>
  <button
    class="css-1fpnmlv-BaseButton-boxStyles-BaseDirectionLink"
    type="button"
  >
    Skip to footer
    <svg
      aria-hidden="true"
      class="css-ub2kzo-Icon"
      clip-rule="evenodd"
      fill-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 3v17M17 16l-5 5-5-5"
      />
    </svg>
  </button>
</div>
`;

exports[`DirectionButton direction: left renders correctly 1`] = `
<div>
  <button
    class="css-1fpnmlv-BaseButton-boxStyles-BaseDirectionLink"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="css-ub2kzo-Icon"
      clip-rule="evenodd"
      fill-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M21 12H4M8 17l-5-5 5-5"
      />
    </svg>
    Back
  </button>
</div>
`;

exports[`DirectionButton direction: right renders correctly 1`] = `
<div>
  <button
    class="css-1fpnmlv-BaseButton-boxStyles-BaseDirectionLink"
    type="button"
  >
    Next
    <svg
      aria-hidden="true"
      class="css-ub2kzo-Icon"
      clip-rule="evenodd"
      fill-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M3 12h17M16 7l5 5-5 5"
      />
    </svg>
  </button>
</div>
`;

exports[`DirectionButton direction: up renders correctly 1`] = `
<div>
  <button
    class="css-1fpnmlv-BaseButton-boxStyles-BaseDirectionLink"
    type="button"
  >
    Top
    <svg
      aria-hidden="true"
      class="css-ub2kzo-Icon"
      clip-rule="evenodd"
      fill-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 21V4M7 8l5-5 5 5"
      />
    </svg>
  </button>
</div>
`;

exports[`DirectionLink direction: down renders correctly 1`] = `
<div>
  <a
    class="css-1ku3z9l-TextLink-boxStyles-BaseDirectionLink"
  >
    Skip to footer
    <svg
      aria-hidden="true"
      class="css-ub2kzo-Icon"
      clip-rule="evenodd"
      fill-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 3v17M17 16l-5 5-5-5"
      />
    </svg>
  </a>
</div>
`;

exports[`DirectionLink direction: left renders correctly 1`] = `
<div>
  <a
    class="css-1ku3z9l-TextLink-boxStyles-BaseDirectionLink"
  >
    <svg
      aria-hidden="true"
      class="css-ub2kzo-Icon"
      clip-rule="evenodd"
      fill-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M21 12H4M8 17l-5-5 5-5"
      />
    </svg>
    Back
  </a>
</div>
`;

exports[`DirectionLink direction: right renders correctly 1`] = `
<div>
  <a
    class="css-1ku3z9l-TextLink-boxStyles-BaseDirectionLink"
  >
    Next
    <svg
      aria-hidden="true"
      class="css-ub2kzo-Icon"
      clip-rule="evenodd"
      fill-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M3 12h17M16 7l5 5-5 5"
      />
    </svg>
  </a>
</div>
`;

exports[`DirectionLink direction: up renders correctly 1`] = `
<div>
  <a
    class="css-1ku3z9l-TextLink-boxStyles-BaseDirectionLink"
  >
    Top
    <svg
      aria-hidden="true"
      class="css-ub2kzo-Icon"
      clip-rule="evenodd"
      fill-rule="evenodd"
      focusable="false"
      height="24"
      role="img"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 21V4M7 8l5-5 5 5"
      />
    </svg>
  </a>
</div>
`;
